Minor translation fixes

--- a/Brainf_ck-sharp.UWP/MultilingualResources/Brainf_ck-sharp.UWP.it.xlf
+++ b/Brainf_ck-sharp.UWP/MultilingualResources/Brainf_ck-sharp.UWP.it.xlf
@@ -835,7 +835,7 @@ In questo modo sarà più facile aiutarti e potrai contribuire a rendere l'app a
         </trans-unit>
         <trans-unit id="WelcomePart4.Text" translate="yes" xml:space="preserve">
           <source>Before jumping straight into the app, it might be a good idea to read the user guide to make sure you remember all there is to know about the language!</source>
-          <target state="translated">Prima di passare subito all'azione, è una buona idea leggere la guida dell'app per essere sicuri di ricordarsi tutto ciò che c'è da sapere sul linguaggio!</target>
+          <target state="translated">Prima di passare subito all'azione, dai un'occhiata alla guida dell'app per essere sicuro di conoscere tutto ciò che c'è da sapere sul linguaggio!</target>
         </trans-unit>
         <trans-unit id="MoveButton.Label" translate="yes" xml:space="preserve">
           <source>Move</source>
