--- a/Brainf_ck-sharp.UWP/Strings/en-US/Resources.resw
+++ b/Brainf_ck-sharp.UWP/Strings/en-US/Resources.resw
@@ -852,4 +852,7 @@ This way he'll be able to help you!</value>
   <data name="ED2D332A-1735-4DD9-A909-59F1587AA17F" xml:space="preserve">
     <value>Integer division</value>
   </data>
+  <data name="MemorySize.Text" xml:space="preserve">
+    <value>Memory size</value>
+  </data>
 </root>
