--- a/src/Brainf_ckSharp.Uwp/Strings/en-US/Resources.resw
+++ b/src/Brainf_ckSharp.Uwp/Strings/en-US/Resources.resw
@@ -405,6 +405,99 @@ Are you enjoying it so far?</value>
     <value>operator</value>
     <comment>This means "operator" or "position", and it will be followed by a number. Keep the initial lowercase.</comment>
   </data>
+  <data name="UserGuide/BreakpointContinue.Text" xml:space="preserve">
+    <value>Continue the execution in debugging mode</value>
+  </data>
+  <data name="UserGuide/BreakpointIntroduction.Text" xml:space="preserve">
+    <value>Do you wonder what's the point of that additional gray bar on the left? You can tap it to add a breakpoint at the corresponding line in your code. This makes it easier to work on larger scripts, as a breakpoint will cause the execution to halt and will let you inspect the current memory state at that location.</value>
+  </data>
+  <data name="UserGuide/BreakpointIntroduction2.Text" xml:space="preserve">
+    <value>Here's a simple example:</value>
+  </data>
+  <data name="UserGuide/BreakpointIntroduction3.Text" xml:space="preserve">
+    <value>When you execute a script in debugging mode and hit a breakpoint, the app will show two options to control how to execute the rest of the script:</value>
+  </data>
+  <data name="UserGuide/BreakpointIntroduction4.Text" xml:space="preserve">
+    <value>Keep in mind that the script execution is only halted when the control flow manages to reach a breakpoint, so it's possible to see code with even multiple breakpoints being run straight to the end. This can indicate that one or more loop conditions are not met, so part of the script is effectively being skipped.</value>
+  </data>
+  <data name="UserGuide/BreakpointIntroduction5.Text" xml:space="preserve">
+    <value>As it turns out, breakpoints can help identify bugs even when they're not reached at all.</value>
+  </data>
+  <data name="UserGuide/BreakpointSkip.Text" xml:space="preserve">
+    <value>Run the rest of the script without breakpoints</value>
+  </data>
+  <data name="UserGuide/Introduction1.Text" xml:space="preserve">
+    <value>Brainf*ck is an esoteric programming language invented in 1993 by Urban Müller.</value>
+  </data>
+  <data name="UserGuide/Introduction2.Text" xml:space="preserve">
+    <value>The language replicates a Turing machine, as the state of the interpreter is only described of a memory array and a memory pointer than can move back and forth and change values of the memory cells, as it passes over them.</value>
+  </data>
+  <data name="UserGuide/Introduction3.Text" xml:space="preserve">
+    <value>A Brainf*ck program is made up of only 8 operators:</value>
+  </data>
+  <data name="UserGuide/Operator1.Description" xml:space="preserve">
+    <value>Moves the memory pointer to the next cell</value>
+  </data>
+  <data name="UserGuide/Operator2.Description" xml:space="preserve">
+    <value>Moves the memory pointer back</value>
+  </data>
+  <data name="UserGuide/Operator3.Description" xml:space="preserve">
+    <value>Increments the value of the current cell</value>
+  </data>
+  <data name="UserGuide/Operator4.Description" xml:space="preserve">
+    <value>Decrements the value of the current cell</value>
+  </data>
+  <data name="UserGuide/Operator5.Description" xml:space="preserve">
+    <value>Starts a loop on the current cell, only if its value is greater than 0</value>
+  </data>
+  <data name="UserGuide/Operator6.Description" xml:space="preserve">
+    <value>Loops and executes the current operators sequence if the value of the current cell is greater than 0</value>
+  </data>
+  <data name="UserGuide/Operator7.Description" xml:space="preserve">
+    <value>Prints the Unicode character corresponding to the value of the current memory cell. The Unicode table is available in the app, under the … menu</value>
+  </data>
+  <data name="UserGuide/Operator8.Description" xml:space="preserve">
+    <value>Reads a Unicode character from the Stdin buffer and stores its value in the current memory cell</value>
+  </data>
+  <data name="UserGuide/PBrainIntroduction.Text" xml:space="preserve">
+    <value>PBrain is an extension of the Brainf*ck language, created by Paul M. Parks. It adds support for functions, with the addition of the following operators:</value>
+  </data>
+  <data name="UserGuide/PBrainOperator1.Description" xml:space="preserve">
+    <value>Defines a function and binds it to the value of the current memory cell</value>
+  </data>
+  <data name="UserGuide/PBrainOperator2.Description" xml:space="preserve">
+    <value>Ends the current function definition</value>
+  </data>
+  <data name="UserGuide/PBrainOperator3.Description" xml:space="preserve">
+    <value>Calls the function associated with the value of the current memory cell</value>
+  </data>
+  <data name="UserGuide/PBrainWarning.Text" xml:space="preserve">
+    <value>A function definition must contain at least a Brainf*ck operator and its body can't be empty. Moreover, it is not possible to define nested functions.</value>
+  </data>
+  <data name="UserGuide/SamplesIntroduction1.Text" xml:space="preserve">
+    <value>A good strategy to learn how to code in Brainf*ck, as with everything else, is to start from simpler and smaller programs and to make them more complex along the way.</value>
+  </data>
+  <data name="UserGuide/SamplesIntroduction2.Text" xml:space="preserve">
+    <value>For example, a common operation is to reset the value of the current cell, whatever it may be.</value>
+  </data>
+  <data name="UserGuide/SamplesIntroduction3.Text" xml:space="preserve">
+    <value>A simple loop can be used in this case:</value>
+  </data>
+  <data name="UserGuide/SamplesIntroduction4.Text" xml:space="preserve">
+    <value>In many situations it is useful to make a copy of the current cell, to be able to perform some operations with its value, without losing track of the initial state of the memory cell.</value>
+  </data>
+  <data name="UserGuide/SamplesIntroduction5.Text" xml:space="preserve">
+    <value>To achieve this, it is possible to create two copies of the current value, resetting the current cell, and then move the second copy back to the first cell, to end up with the original value plus a copy in the following cell:</value>
+  </data>
+  <data name="UserGuide/SamplesIntroduction6.Text" xml:space="preserve">
+    <value>All these techniques can be combined to write more complex programs. A good idea is to try to optimize the script in order to perform as few operations as possible — generally this also means that the final code will be shorter and easier to read.</value>
+  </data>
+  <data name="UserGuide/SamplesIntroduction7.Text" xml:space="preserve">
+    <value>In this example, to print the word "Hello" two loops will be used to set two cells to values closer to the letters that will be printed. It's definitely better to use a similar approach than to repeating the + operator 72 times to print the &amp;quot;H&amp;quot; character:</value>
+  </data>
+  <data name="UserGuide/SamplesIntroduction8.Text" xml:space="preserve">
+    <value>This script will set the cells #2 and #3 to values closer to the characters that will be printed by the program, so that less operations will be needed to get to the actual values the code wants to display to the user.</value>
+  </data>
   <data name="UserGuideSection/Debugging/Description" xml:space="preserve">
     <value>Find errors more easily with debugging features</value>
   </data>
