--- a/src/Brainf_ckSharp.Uwp/Strings/en-US/Resources.resw
+++ b/src/Brainf_ckSharp.Uwp/Strings/en-US/Resources.resw
@@ -408,7 +408,7 @@ Are you enjoying it so far?</value>
   <data name="UserGuide/BreakpointContinue.Text" xml:space="preserve">
     <value>Continue the execution in debugging mode</value>
   </data>
-  <data name="UserGuide/BreakpointIntroduction.Text" xml:space="preserve">
+  <data name="UserGuide/BreakpointIntroduction1.Text" xml:space="preserve">
     <value>Do you wonder what's the point of that additional gray bar on the left? You can tap it to add a breakpoint at the corresponding line in your code. This makes it easier to work on larger scripts, as a breakpoint will cause the execution to halt and will let you inspect the current memory state at that location.</value>
   </data>
   <data name="UserGuide/BreakpointIntroduction2.Text" xml:space="preserve">
@@ -427,12 +427,9 @@ Are you enjoying it so far?</value>
     <value>Run the rest of the script without breakpoints</value>
   </data>
   <data name="UserGuide/Introduction1.Text" xml:space="preserve">
-    <value>Brainf*ck is an esoteric programming language invented in 1993 by Urban Müller.</value>
+    <value>Brainf*ck is an esoteric programming language invented in 1993 by Urban Müller. The language replicates a Turing machine, as the state of the interpreter is only described of a memory array and a memory pointer than can move back and forth and change values of the memory cells, as it passes over them.</value>
   </data>
   <data name="UserGuide/Introduction2.Text" xml:space="preserve">
-    <value>The language replicates a Turing machine, as the state of the interpreter is only described of a memory array and a memory pointer than can move back and forth and change values of the memory cells, as it passes over them.</value>
-  </data>
-  <data name="UserGuide/Introduction3.Text" xml:space="preserve">
     <value>A Brainf*ck program is made up of only 8 operators:</value>
   </data>
   <data name="UserGuide/Operator1.Description" xml:space="preserve">
@@ -463,13 +460,13 @@ Are you enjoying it so far?</value>
     <value>PBrain is an extension of the Brainf*ck language, created by Paul M. Parks. It adds support for functions, with the addition of the following operators:</value>
   </data>
   <data name="UserGuide/PBrainOperator1.Description" xml:space="preserve">
-    <value>Defines a function and binds it to the value of the current memory cell</value>
+    <value>Defines a function bound to the value of the current memory cell</value>
   </data>
   <data name="UserGuide/PBrainOperator2.Description" xml:space="preserve">
     <value>Ends the current function definition</value>
   </data>
   <data name="UserGuide/PBrainOperator3.Description" xml:space="preserve">
-    <value>Calls the function associated with the value of the current memory cell</value>
+    <value>Calls the function bound to the value of the current memory cell</value>
   </data>
   <data name="UserGuide/PBrainWarning.Text" xml:space="preserve">
     <value>A function definition must contain at least a Brainf*ck operator and its body can't be empty. Moreover, it is not possible to define nested functions.</value>
@@ -493,7 +490,7 @@ Are you enjoying it so far?</value>
     <value>All these techniques can be combined to write more complex programs. A good idea is to try to optimize the script in order to perform as few operations as possible — generally this also means that the final code will be shorter and easier to read.</value>
   </data>
   <data name="UserGuide/SamplesIntroduction7.Text" xml:space="preserve">
-    <value>In this example, to print the word "Hello" two loops will be used to set two cells to values closer to the letters that will be printed. It's definitely better to use a similar approach than to repeating the + operator 72 times to print the &amp;quot;H&amp;quot; character:</value>
+    <value>In this example, to print the word "Hello" two loops will be used to set two cells to values closer to the letters that will be printed. It's definitely better to use a similar approach than to repeating the + operator 72 times to print the 'H' character:</value>
   </data>
   <data name="UserGuide/SamplesIntroduction8.Text" xml:space="preserve">
     <value>This script will set the cells #2 and #3 to values closer to the characters that will be printed by the program, so that less operations will be needed to get to the actual values the code wants to display to the user.</value>
