Remove 'MarkdownTextBlock' use

--- a/src/Brainf_ckSharp.Uwp/Strings/en-US/Resources.resw
+++ b/src/Brainf_ckSharp.Uwp/Strings/en-US/Resources.resw
@@ -121,7 +121,7 @@
     <value>Build:</value>
     <comment>Keep the initial uppercase and trailing :</comment>
   </data>
-  <data name="About/Description.Text" xml:space="preserve">
+  <data name="About/Description.[using:Brainf_ckSharp.Uwp.AttachedProperties]MarkdownHelper.Text" xml:space="preserve">
     <value>**Brainf*ck#** is a console and IDE for **Brainf*ck/PBrain**.
 
 Thanks to **Andrea Salvati** for his help with the original interpreter algorithm that we designed back in 2015, **Camil Demetrescu** for the idea to port **Brainf*ck#** to Windows 10 and **Christopher Blackman** for his help during the app development.</value>
