Remove last Toolkit.Controls references

--- a/src/Brainf_ckSharp.Uwp/Strings/en-US/Resources.resw
+++ b/src/Brainf_ckSharp.Uwp/Strings/en-US/Resources.resw
@@ -294,7 +294,7 @@ Thanks to **Andrea Salvati** for his help with the original interpreter algorith
   <data name="OverflowMode/UshortWithOverflow" xml:space="preserve">
     <value>Signed short [0, 65535]</value>
   </data>
-  <data name="ReviewPrompt/Body.Text" xml:space="preserve">
+  <data name="ReviewPrompt/Body.[using:Brainf_ckSharp.Uwp.AttachedProperties]MarkdownHelper.Text" xml:space="preserve">
     <value>Thank you for downloading **Brainf\*ck#**!
 
 Are you enjoying it so far?</value>
